--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,8 +18,20 @@ services:
     restart: always
     entrypoint: ["sh", "entrypoint.sh"]
     networks:
-      intranet_net:
-        ipv4_address: 172.20.0.10
+      - intranet_net
+
+  nginx:
+    image: nginx:latest
+    container_name: intranet_proxy
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/certs:/etc/nginx/certs
+    ports:
+      - "443:443"  # Port HTTPS
+    depends_on:
+      - intranet_app
+    networks:
+      - intranet_net
 
   db:
     image: mariadb:latest
