feat: Update Nginx configuration for enhanced security and add HTTP to HTTPS redirection
feat: Add development Docker Compose file for local development setup

refactor: Modify main Docker Compose file to integrate Nginx and adjust service dependencies

chore: Create script to generate .env file with random passwords for secure configuration

docs: Add quick-start script for simplified application startup in development and production modes

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,10 +4,9 @@ services:
       context: .
       dockerfile: Dockerfile.app
     container_name: intranet_app
-    ports:
-      - "80:5000"  # Port d'écoute de l'application
     depends_on:
       - db
+      - nginx
     volumes:
       - ${FILES_LOCAL_PATH}:${FILES_DOCKER_PATH}  # Persistance des fichiers de contrats
       - ${PRINT_LOCAL_PATH}:${PRINT_DOCKER_PATH}
@@ -24,12 +23,11 @@ services:
     image: nginx:latest
     container_name: intranet_proxy
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./nginx/certs:/etc/nginx/certs
+      - ./app/nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./app/nginx/certs:/etc/nginx/certs
     ports:
       - "443:443"  # Port HTTPS
-    depends_on:
-      - intranet_app
+      - "80:80"
     networks:
       - intranet_net
 
