--- a/app/nginx/nginx.conf
+++ b/app/nginx/nginx.conf
@@ -17,7 +17,7 @@ http {
         add_header Permissions-Policy "geolocation=(), microphone=()";
 
         location / {
-            proxy_pass http://intranet_app:5000;
+            proxy_pass http://web:5000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
