feat: Ajout de la gestion des logs d'activité avec FastAPI et MongoDB

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -64,6 +64,14 @@ services:
       - /etc/timezone:/etc/timezone:ro  #  Synchronisation du fuseau horaire avec l'hôte
     networks:
       - intranet_net
+  
+  intranet-logs-mongodb:
+    image: mongo:latest
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongo_data:/data/db
+
 
 volumes:
   dbdata:
@@ -90,6 +98,8 @@ volumes:
       type: none
       device: ${PRINT_LOCAL_PATH}
       o: bind
+  mongo_data:
+    driver: local
 
 networks:
   intranet_net:
