--- a/app/nginx/nginx.conf
+++ b/app/nginx/nginx.conf
@@ -6,8 +6,8 @@ http {
         listen 443 ssl;
         server_name 86.207.255.245;
 
-        ssl_certificate /etc/nginx/certs/cert.pem;
-        ssl_certificate_key /etc/nginx/certs/privkey.pem;
+        ssl_certificate     /etc/nginx/certs/intraraudiere.crt;
+        ssl_certificate_key /etc/nginx/certs/intraraudiere.key;
 
         # 🔐 Headers de sécurité
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
