--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,7 +25,7 @@ services:
       - web
     volumes:
       - ./app/nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./app/nginx/certs:/etc/nginx/certs
+      - /opt/certs:/etc/nginx/certs
     ports:
       - "443:443"  # Port HTTPS
       - "80:80"
