fix: Corriger la création de noms de fichiers, ajouter une limite plus élevée au niveau du serveur nginx de taille pour les requêtes et trier les événements et documents par date

--- a/app/nginx/nginx.conf
+++ b/app/nginx/nginx.conf
@@ -16,6 +16,8 @@ http {
         add_header Referrer-Policy "no-referrer";
         add_header Permissions-Policy "geolocation=(), microphone=()";
 
+        client_max_body_size 20M;
+
         location / {
             proxy_pass http://web:5000;
             proxy_set_header Host $host;
