Refactor application structure and configuration management
- Moved configuration settings to a new config.py file, utilizing environment variables for sensitive data.
- Updated the docs.py file to dynamically retrieve configuration values and ensure folder existence.
- Refactored impression.py to improve printer connection handling and configuration retrieval.
- Modified rapport_echeances.py to use Flask's global context for database session management.
- Removed outdated routes.py and run.py files, replacing them with a new entrypoint script for container initialization.
- Created a Dockerfile for the application with necessary dependencies and configurations.
- Added SQL scripts for database initialization and test data generation, along with a README for usage instructions.
- Implemented a password hashing script for secure user password management.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 .env
+venveraudiere/
 veraudiere/
 __pycache__/
 app/__pycache__
 *.pem
 venv/
+
+# Fichiers de test (ne pas commiter vers main)
+sql/test_user.sql
