fix: Mettre à jour l'image de la base de données MariaDB vers la version 12.0.2

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -33,7 +33,7 @@ services:
       - intranet_net
 
   db:
-    image: mariadb:latest
+    image: mariadb:12.0.2
     container_name: intranet_db
     restart: always
     environment:
