feat: Suppression du Makefile, ajout de la gestion des erreurs d'authentification, et mise à jour de la configuration Nginx pour le support HTTP et HTTPS

--- a/app/nginx/nginx_https.conf
+++ b/app/nginx/nginx_https.conf
@@ -3,10 +3,14 @@ events {
 }
 http {
     server {
-        listen 80;
+        listen 443 ssl;
         server_name 86.207.255.245;
 
-        # 🔒 Headers de sécurité (HTTP)
+        ssl_certificate     /etc/nginx/certs/intraraudiere.crt;
+        ssl_certificate_key /etc/nginx/certs/intraraudiere.key;
+
+        # 🔐 Headers de sécurité
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
         add_header X-Frame-Options "DENY";
         add_header X-Content-Type-Options "nosniff";
         add_header Referrer-Policy "no-referrer";
@@ -19,5 +23,12 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
+    }
+    server {
+    listen 80;
+    server_name 86.207.255.245;
+
+    # 🔁 Redirection vers HTTPS
+    return 301 https://$host$request_uri;
     }
 }
