--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,6 +17,8 @@ services:
     entrypoint: ["sh", "app/entrypoint.sh"]
     extra_hosts:
       - "host.docker.internal:host-gateway"
+    ports:
+      - "5000:5000" # Port de l'application Flask pour le développement local DEV
     networks:
       intranet_net:
       cups_network:
@@ -37,7 +39,10 @@ services:
       - intranet_net
 
   db:
-    image: mariadb:12.0.2
+    build:
+      context: ./database
+      dockerfile: Dockerfile.mariadb
+    image: intranet_mariadb:12.0.2
     container_name: intranet_db
     restart: always
     environment:
