Refactor codebase for consistency and functionality improvements
- Updated function parameters and variable names to use snake_case in `docs.py`, `models.py`, and JavaScript files for better readability and consistency.
- Enhanced `entrypoint.sh` to dynamically replace the database URL in `alembic.ini` if provided.
- Modified SQLAlchemy models to include ForeignKey relationships and adjusted field names to follow snake_case conventions.
- Updated HTML templates to reflect changes in model attributes and ensure proper data binding.
- Improved JavaScript functions for updating dropdown menus based on selected values.
- Added database migration checks in `run.py` to ensure the database schema is up to date with Alembic.
- Adjusted Docker configuration to use the correct environment variable for the database URL.
- Updated requirements.txt to include `waitress` for serving the application.
- Documented changes in the changelog and SQL initialization scripts to reflect the new schema.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,7 +10,7 @@ services:
       - ${FILES_LOCAL_PATH}:${FILES_DOCKER_PATH}  # Persistance des fichiers de contrats
       - ${PRINT_LOCAL_PATH}:${PRINT_DOCKER_PATH}
     environment:
-      - DATABASE_URL=${DB_URL}
+      - DB_URL=${DB_URL}
     env_file:
       - .env
     restart: always
