feat: Ajouter des scripts de sauvegarde et de restauration pour la base de données MariaDB

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,10 @@ venv/
 
 # Fichiers de test (ne pas commiter vers main)
 sql/test_user.sql
+
+# Sauvegardes
+*.sql.gz
+*.sql
+*.bak
+*.backup
+*.old
