--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,6 +17,8 @@ services:
     entrypoint: ["sh", "app/entrypoint.sh"]
     extra_hosts:
       - "host.docker.internal:host-gateway"
+    ports:
+      - "5000:5000"  #  Port de l'application Flask
     networks:
       intranet_net:
       cups_network:
