--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -71,7 +71,7 @@ jobs:
         fail_ci_if_error: false
 
   security-scan:
-    runs-on: ubuntu-latest
+    runs-on: debian-bookworm
     
     steps:
     - name: Checkout code
@@ -89,7 +89,7 @@ jobs:
         path: bandit-report.json
 
   dependency-check:
-    runs-on: ubuntu-latest
+    runs-on: debian-bookworm
     
     steps:
     - name: Checkout code
@@ -111,7 +111,7 @@ jobs:
         safety check --json --output safety-report.json || true
     
     - name: Upload dependency check results
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: dependency-check-results
         path: safety-report.json
