--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -36,8 +36,8 @@ jobs:
     
     - name: Install system dependencies
       run: |
-        sudo apt-get update
-        sudo apt-get install -y libmariadb-dev pkg-config
+        apt-get update
+        apt-get install -y libmariadb-dev pkg-config
     
     - name: Install Python dependencies
       run: |
