--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,60 +10,22 @@ jobs:
   test:
     runs-on: ubuntu-latest
     
-    container:
-      image: python:3.12.11-bookworm
-      
-    strategy:
-      matrix:
-        python-version: [3.12]
-    
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
     
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ matrix.python-version }}
+    - name: Build Docker image
+      run: docker build -f app/Dockerfile.app -t intranet-app .
     
-    - name: Cache pip dependencies
-      uses: actions/cache@v4
-      with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-
-    
-    - name: Install system dependencies
+    - name: Run tests in Docker container
       run: |
-        apt-get update
-        apt-get install -y libmariadb-dev pkg-config
-    
-    - name: Install Python dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install pytest pytest-flask pytest-cov pytest-mock
-    
-    - name: Create test environment variables
-      run: |
-        echo "TESTING=true" >> $GITHUB_ENV
-        echo "SECRET_KEY=test-secret-key-for-ci" >> $GITHUB_ENV
-    
-    - name: Run linting
-      run: |
-        pip install flake8
-        # Stop the build if there are Python syntax errors or undefined names
-        flake8 app/ --count --select=E9,F63,F7,F82 --show-source --statistics
-        # Exit-zero treats all errors as warnings
-        flake8 app/ --count --exit-zero --max-complexity=10 --max-line-length=120 --statistics
-    
-    - name: Run tests with coverage
-      run: |
-        cd test/
-        python -m pytest -v --cov=../app --cov-report=term-missing --cov-report=xml
-      env:
-        PYTHONPATH: ${{ github.workspace }}
+        docker run --rm \
+          -e TESTING=true \
+          -e SECRET_KEY=test-secret-key-for-ci \
+          -v ${{ github.workspace }}/test:/app/test \
+          -v ${{ github.workspace }}/app:/app/app \
+          intranet-app \
+          bash -c "pip install pytest pytest-flask pytest-cov pytest-mock && cd /app/test && pytest -v --cov=../app --cov-report=term-missing --cov-report=xml"
     
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v4
