Refactor CI workflow to use Docker Compose for tests

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,26 +14,33 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
     
-    - name: Build Docker image
-      run: docker build -f app/Dockerfile.app -t intranet-app .
-    
-    - name: Run tests in Docker container
-      run: |
-        docker run --rm \
-          -e TESTING=true \
-          -e SECRET_KEY=test-secret-key-for-ci \
-          -v ${{ github.workspace }}/test:/app/test \
-          -v ${{ github.workspace }}/app:/app/app \
-          intranet-app \
-          bash -c "pip install pytest pytest-flask pytest-cov pytest-mock && cd /app/test && pytest -v --cov=../app --cov-report=term-missing --cov-report=xml"
-    
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v4
-      with:
-        file: ./test/coverage.xml
-        flags: unittests
-        name: codecov-umbrella
-        fail_ci_if_error: false
+    - name: Copy .env.example to .env (si besoin)
+        run: cp .env.example .env || true
+
+      - name: Build and start containers
+        run: docker compose up -d --build
+
+      - name: Wait for DB to be ready
+        run: |
+          until docker compose exec -T intranet_db mysqladmin ping -h "localhost" --silent; do
+            echo "Waiting for database connection..."
+            sleep 5
+          done
+
+      - name: Run tests in app container
+        run: docker compose exec -T intranet_app pytest -v --cov=app --cov-report=xml
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          file: ./coverage.xml
+          flags: unittests
+          name: codecov-umbrella
+          fail_ci_if_error: false
+
+      - name: Stop containers
+        if: always()
+        run: docker compose down -v
 
   security-scan:
     runs-on: ubuntu-latest
