--- a/.env.example
+++ b/.env.example
@@ -33,3 +33,8 @@ EMAIL_USER=noreply@votre-etablissement.fr
 EMAIL_PASSWORD=CHANGE_ME_32_CHARS_EMAIL_PASSWORD
 EMAIL_SMTP=smtp.gmail.com
 EMAIL_PORT=587
+
+# Pour les workflows
+DB_PORTS=3306:3306
+WEB_PORTS=5000:5000
+EXPOSE_PORTS=Workflow
